/*
 * Copyright (C) 2018 Roman Vaivod
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

#ifndef LTTLWHWHT_ACTION_H
#define LTTLWHWHT_ACTION_H

#include "wired.h"

//! I am an action that can try to run. I am Wired.
class Action : public Wired {
  public:
    //! Constructs me
    Action(const Wired & wire): Wired(wire) {}
    //! Destroys me
    virtual ~Action() {}
    //! Tries to run me
    virtual bool tryRun() = 0;
};

#endif // LTTLWHWHT_ACTION_H